@@ -36,6 +36,14 @@ PKG_CHECK_MODULES(GNOME_KEYRING, gnome-keyring-1)
 AC_SUBST(GNOME_KEYRING_CFLAGS)
 AC_SUBST(GNOME_KEYRING_LIBS)
 
+PKG_CHECK_MODULES([NOTIFY], [libnotify >= 0.3.0], [enable_notify=yes],
+                                [enable_notify=no])
+if test "x$enable_notify" != "xno"; then
+   AC_DEFINE_UNQUOTED([ENABLE_NOTIFY], [1],
+   [Enable notifications with libnotify])
+fi
+AM_CONDITIONAL(ENABLE_NOTIFY, test x"$enable_notify" != xno)
+
 dnl Checks for header files.
 
 dnl Checks for typedefs, structures, and compiler characteristics.
